# IT-Navigator

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_STATUS.md  MULTI_DIMENSIONAL_WEIGHTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  full_implementation_plan.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  it_tests.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_20_1054-76d987106dc4_initial_tables.py  2026_05_27_1512-bf79b3c1ef18_add_multi_dimensional_weights_to_answers.py
backend/app/: __init__.py  main.py
backend/app/admin/: auth.py  pages.py  pages.py.backup  views.py
backend/app/admin/templates/: test_editor.html  test_editor_simple.html
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin_tests.py  auth.py  tests.py
backend/app/core/: cache.py  config.py  logging.py  security.py
backend/app/crud/: admin_test.py  scoring.py  test.py  user.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  answer.py  question.py  result.py  specialty.py  test.py  user.py
backend/app/schemas/: test.py  user.py
backend/app/worker/: celery_app.py  tasks.py
backend/scripts/: __init__.py  generate_weights.py  import_it_tests.py  init_db.py  init_db_old.py  load_it_tests.py  update_specialties.py
backend/tests/: conftest.py  test_auth.py  test_scoring.py  test_tests_api.py
frontend/: .dockerignore  (+4 more)
(+24 files in other folders)
